Fuco v2 release (#2)
* to test

* flags: open registarion, skip otp
